prevent device dark mode from overrwrite style

--- a/public/style.css
+++ b/public/style.css
@@ -400,7 +400,7 @@ input[type="range"]::-webkit-slider-thumb:hover {
     }
     .detailed-card li {
         list-style: none;
-        font-size: 0.55rem;
+        font-size: 0.5rem;
         margin: 0;
         padding: 0.3rem;
         display: flex;
